feature(server): add support for customFormat 'idn-email' and schema extensions 'x-derived-from', 'x-disclaimer', 'x-license-url', 'x-model-schema', 'x-model-tags', 'x-version' and const
